--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
           <div class="columns is-mobile is-marginless heading has-text-weight-bold">
               <div class="column left">
                   <figure class="image">
-                      <img th:src="@{/img/CSCParts_logo.png}" style="width: auto; height: auto;">
+                      <img th:src="@{/img/CSCParts_logo.png}" style="width: 200px; height: 200px;">
                   </figure>
               </div>
               
