--- a/src/main/resources/templates/admin/chartByDateRange.html
+++ b/src/main/resources/templates/admin/chartByDateRange.html
@@ -29,21 +29,21 @@
             <main role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
               <div class="col-md-12">
                 <div class="row px-2 mt-3" style="margin-left: 5%;">
-                  <div class="col-12 text-primary">
+                  <div class="col-12">
                     <span class="h3">DASHBOARD</span><span class="h6" th:text="${' Quotes , Orders & Invoices -  Today ('+toDay+')'}"></span>
                   </div>
                   
                 </div>
-                <div class="album py-3 px-2 bg-light">
+                 <div class="album py-3 px-2 bg-light">
                   <div class="row">
                       <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesDaily},totalStyle='background-color: #00bfff;',targetValue=${salesQuotesTargetDaily},targetStyle='background-color: #ff85e6;',qtyValue=${salesQuotesQtyDaily}, qtyTarget=${salesQuotesTargetQtyDaily},avgValue=${averageDailyQuotes},avgTarget=${averageDailyQuotesTarget},avgProfitValue=${averageDailyQuotesProfit},avgProfitTarget=${averageDailyQuotesProfitTarget},targetAchieved=${targetAchievedQuotes},graphDiv='graph_div_quotes')"></div>
+                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesDaily},totalStyle='background-color: #00bfff;',targetValue=${salesQuotesTargetDaily},targetStyle='background-color: #ff85e6;',qtyValue=${salesQuotesQtyDaily}, qtyTarget=${salesQuotesTargetQtyDaily},avgValue=${averageDailyQuotes},avgTarget=${averageDailyQuotesTarget},avgProfitValue=${averageDailyQuotesProfit},avgProfitTarget=${averageDailyQuotesProfitTarget},graphDiv='graph_div_quotes')"></div>
                       </div>
                       <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedDaily},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedTargetDaily},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyDaily}, qtyTarget=${salesOrderedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyOrdersProfit},avgProfitTarget=${averageDailyOrdersProfitTarget},targetAchieved=${targetAchievedOrders},graphDiv='graph_div_orders')"> </div>
+                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedDaily},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedTargetDaily},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyDaily}, qtyTarget=${salesOrderedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyOrdersProfit},avgProfitTarget=${averageDailyOrdersProfitTarget},graphDiv='graph_div_orders')"> </div>
                       </div>
                       <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedDaily},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedTargetDaily},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyDaily}, qtyTarget=${salesInvoicedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyInvoicesProfit},avgProfitTarget=${averageDailyInvoicesProfitTarget},targetAchieved=${targetAchievedInvoices},graphDiv='graph_div_invoices')"> </div>
+                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedDaily},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedTargetDaily},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyDaily}, qtyTarget=${salesInvoicedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyInvoicesProfit},avgProfitTarget=${averageDailyInvoicesProfitTarget},graphDiv='graph_div_invoices')"> </div>
                       </div>   
                   </div>
                 </div>
@@ -92,20 +92,12 @@
   
   var salesOrderTargetArr = [];
   salesOrderTargetArr.push(["Date","Actual","Target","Daily Avg"]);
-  if(salesOrderTargets.length == 0)
-  {
-    salesOrderTargetArr.push(["0",0,0,0]);
-  }
   for (i = 0; i < salesOrderTargets.length; i++) {
     salesOrderTargetArr.push([salesOrderTargets[i].date.split("T")[0].split("-")[2]+'/'+salesOrderTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].averageTotal.toFixed(2))]);
   }
   console.log('salesOrderTargetArr-->'+salesOrderTargetArr);
   var salesQuoteTargetArr = [];
   salesQuoteTargetArr.push(["Date","Actual","Target","Daily Avg"]);
-  if(salesQuoteTargets.length == 0)
-  {
-    salesQuoteTargetArr.push(["0",0,0,0]);
-  }
   for (i = 0; i < salesQuoteTargets.length; i++) {
     salesQuoteTargetArr.push([salesQuoteTargets[i].date.split("T")[0].split("-")[2]+'/'+salesQuoteTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].averageTotal.toFixed(2))]);
   }
@@ -113,10 +105,6 @@
 
   var salesInvoiceTargetArr = [];
   salesInvoiceTargetArr.push(["Date","Actual","Target","Daily Avg"]);
-  if(salesInvoiceTargets.length == 0)
-  {
-    salesInvoiceTargetArr.push(["0",0,0,0]);
-  }
   for (i = 0; i < salesInvoiceTargets.length; i++) {
     salesInvoiceTargetArr.push([salesInvoiceTargets[i].date.split("T")[0].split("-")[2]+'/'+salesInvoiceTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].averageTotal.toFixed(2))]);
   }
@@ -196,15 +184,18 @@
         var dataGraphInvoicesOptions = {
           width: 400,
           legend:'top',
-          title: 'Invoices vs Target - Month to Date',
-          vAxis: {
-            // Adds titles to each axis.
-          0: {title: 'Actual($)'},
-          1: {title: 'Target($)'}
-          },
+          title: 'Sales vs Target Last 7 Days',
+          vAxis: {title: 'Amount($)'},
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#0b4119'},1: {targetAxisIndex: 1,type: 'area',color : '#92edaa'},2: {type: 'line',color : 'red'}}
+          series: {0: {axis: 'Actual',color : '#0b4119'},1: {axis: 'Target',type: 'line',color : '#92edaa'},2: {type: 'line',color : 'red'}},
+          axes: {
+          // Adds labels to each axis; they don't have to match the axis names.
+          y: {
+            Actual: {label: 'Amount($)'},
+            Target: {label: 'Amount($)'}
+          }
+          }
         };
         var graphInvoices = new google.visualization.ComboChart(graph_div_invoices);
         graphInvoices.draw(dataGraphInvoices, dataGraphInvoicesOptions);
@@ -214,15 +205,18 @@
         var dataGraphOrdersOptions = {
           width: 400,
           legend:'top',
-          title: 'Orders vs Target - Month to Date',
-          vAxis: {
-            // Adds titles to each axis.
-          0: {title: 'Actual($)'},
-          1: {title: 'Target($)'}
-          },
+          title: 'Sales vs Target Last 7 Days',
+          vAxis: {title: 'Amount($)'},
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#f9ae06'},1: {targetAxisIndex: 1,type: 'area',color : '#fff67e'},2: {type: 'line',color : 'red'}}
+          series: {0: {axis: 'Actual',color : '#f9ae06'},1: {axis: 'Target',type: 'line',color : '#fff67e'},2: {type: 'line',color : 'red'}},
+          axes: {
+          // Adds labels to each axis; they don't have to match the axis names.
+          y: {
+            Actual: {label: 'Amount($)'},
+            Target: {label: 'Amount($)'}
+          }
+        }
         };
         var graphOrders = new google.visualization.ComboChart(graph_div_orders);
         graphOrders.draw(dataGraphOrders, dataGraphOrdersOptions);
@@ -232,15 +226,19 @@
         var dataGraphQuotesOptions = {
           width: 400,
           legend:'top',
-          title: 'Quotes vs Target - Month to Date',
-          vAxis: {
-          // Adds titles to each axis.
-          0: {title: 'Actual($)'},
-          1: {title: 'Target($)'}
-          },
+          title: 'Sales vs Target',
+          title: 'Sales vs Target Last 7 Days',
+          vAxis: {title: 'Amount($)'},
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#00bfff'},1: {targetAxisIndex: 1,type: 'area',color : '#ff85e6'},2: {type: 'line',color : 'red'}}
+          series: {0: {axis: 'Actual',color : '#00bfff'},1: {axis: 'Target',type: 'line',color : '#ff85e6'},2: {type: 'line',color : 'red'}},
+          axes: {
+          // Adds labels to each axis; they don't have to match the axis names.
+          y: {
+            Actual: {label: 'Amount($)'},
+            Target: {label: 'Amount($)'}
+          }
+          }
         };
         var graphQuotes = new google.visualization.ComboChart(graph_div_quotes);
         graphQuotes.draw(dataGraphQuotes, dataGraphQuotesOptions);
