--- a/src/main/resources/templates/admin/dashboardCardLayout.html
+++ b/src/main/resources/templates/admin/dashboardCardLayout.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<div class="card mb-4 shadow-sm" th:fragment="cardFields(isFullScreen,cardTitle,guageDiv,totalValue, totalStyle,targetValue,targetStyle,qtyValue, qtyTarget,avgValue,avgTarget,avgProfitValue,avgProfitTarget,graphDiv)">
+<div class="card mb-4 shadow-sm" th:fragment="cardFields(isFullScreen,cardTitle,guageDiv,totalValue, totalStyle,targetValue,targetStyle,qtyValue, qtyTarget,avgValue,avgTarget,avgProfitValue,avgProfitTarget,targetAchieved,graphDiv)">
     <div class="card-header h3"  th:text="${cardTitle}"></div>
         <div class="card-body d-flex justify-content-center" th:id="${guageDiv}"></div>
         <th:block th:if=${!isFullScreen}>
                <div class="d-flex justify-content-center">
-            <button type="button" class="col-md-5 btn btn-sm mr-2" th:style="${totalStyle}" th:title="${'Total : $' + totalValue}"><span th:text="${'Total : $ ' + totalValue}"></span></button>
-            <button type="button" class="col-md-5 btn btn-sm" th:style="${targetStyle}" th:title="${'Target : $' + targetValue}"><span th:text="${'Target : $ ' + targetValue}"></span></button>
+            <button type="button" class="col-md-5 btn btn-sm mr-2" th:style="${totalStyle}" th:title="${'Total : $' + #numbers.formatDecimal(totalValue, 1, 'COMMA', 2, 'POINT')}"><span th:text="${'Total : $ ' + #numbers.formatDecimal(totalValue, 1, 'COMMA', 2, 'POINT')}"></span></button>
+            <button type="button" class="col-md-5 btn btn-sm" th:style="${targetStyle}" th:title="${'Target : $' + #numbers.formatDecimal(targetValue, 1, 'COMMA', 2, 'POINT')}"><span th:text="${'Target : $ ' + #numbers.formatDecimal(targetValue, 1, 'COMMA', 2, 'POINT')}"></span></button>
+            </div>
+            <div class="d-flex justify-content-center small mt-2 ml-4 mr-4">
+              <table class="table table-sm table-bordered">
+                <tbody>
+                <tr>
+                  <th>Qty</th>
+                  <th rowspan="3" class="verticalTableHeader" th:style="${totalStyle}">ACTUAL</th>
+                  <th th:text="${#numbers.formatInteger(qtyValue,1)}"></th>
+                  <th rowspan="3" class="verticalTableHeader" th:style="${targetStyle}" >TARGET</th>
+                  <th th:text="${#numbers.formatInteger(qtyTarget,1)}"></th>
+                </tr>
+                <tr>
+                  <th>Avg $</th>
+                  <th th:text="${#numbers.formatDecimal(avgValue, 1, 'COMMA', 2, 'POINT')}"></th>
+                  <th th:text="${#numbers.formatDecimal(avgTarget, 1, 'COMMA', 2, 'POINT')}"></th>
+                </tr>
+                <tr>
+                  <th>Avg GP %</th>
+                  <th rowspan="3" th:text="${#numbers.formatDecimal(avgProfitValue, 1, 'COMMA', 2, 'POINT')}"></th>
+                  <th th:text="${#numbers.formatDecimal(avgProfitTarget, 1, 'COMMA', 2, 'POINT')}"></th>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+      </th:block>
+      <th:block th:unless=${!isFullScreen}>
+        <div class="d-flex justify-content-center">
+          <button type="button" class="col-md-12 btn btn-sm" th:style="${targetStyle}" th:title="${'To be Achieved : $ ' + #numbers.formatDecimal((targetAchieved -100), 1, 'COMMA', 2, 'POINT')+ '%'}"><span th:text="${#numbers.formatDecimal((targetAchieved -100), 1, 'COMMA', 2, 'POINT')+ '%'}"></span></button>
+        </div>
+        <div class="d-flex justify-content-center small mt-2 ml-4 mr-4">
+          <table class="table table-sm table-bordered">
+            <tbody>
+            <tr>
+              <th>Qty</th>
+              <th th:text="${#numbers.formatInteger((qtyValue - qtyTarget),1)}"></th>
+            </tr>
+            <tr>
+              <th>Avg $</th>
+              <th th:text="${#numbers.formatDecimal((avgValue - avgTarget), 1, 'COMMA', 2, 'POINT')}"></th>
+            </tr>
+            <tr>
+              <th>Avg GP %</th>
+              <th th:text="${#numbers.formatDecimal((avgProfitValue - avgProfitTarget), 1, 'COMMA', 2, 'POINT')}"></th>
+            </tr>
+            </tbody>
+          </table>
         </div>
       </th:block>
-        <div class="d-flex justify-content-center small mt-2 ml-4 mr-4">
-            <table class="table table-sm table-bordered">
-              <tbody>
-              <tr>
-                <th>Qty</th>
-                <th rowspan="3" class="verticalTableHeader" th:style="${totalStyle}">ACTUAL</th>
-                <td th:text="${qtyValue}"></td>
-                <th rowspan="3" class="verticalTableHeader" th:style="${targetStyle}" >TARGET</th>
-                <td th:text="${qtyTarget}"></td>
-              </tr>
-              <tr>
-                <th>Avg $</th>
-                <td th:text="${avgValue}"></td>
-                <td th:text="${avgTarget}"></td>
-              </tr>
-              <tr>
-                <th>Avg GP %</th>
-                <td rowspan="3" th:text="${avgProfitValue}"></td>
-                <td th:text="${avgProfitTarget}"></td>
-              </tr>
-              </tbody>
-            </table>
-          </div>
+        
           <div th:id="${graphDiv}" class="d-flex justify-content-center mt-5"></div>
          </div>  
   </html>
