--- a/src/main/resources/templates/headerLayout.html
+++ b/src/main/resources/templates/headerLayout.html
@@ -4,14 +4,39 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+    <th:block th:if=${!isFullScreen}>
     <a class="navbar-brand" href="#">
         <a class="navbar-brand" th:href="@{/admin/home}"><img src="../img/logo.c90ecd5a.png" height="30" class="d-inline-block align-top" alt="OneSysConsulting"></a>
         <span class="menu-collapsed"></span>
     </a>
+</th:block>
+    <th:block th:unless=${!isFullScreen}>
+        <a class="navbar-brand" href="#">
+            <a th:href="@{/admin/home}"><img src="../img/CSCParts_logo.png" class="d-inline-block align-top" alt="OneSysConsulting" style="width: auto;height: 100px;margin-top: 60px;"></a>
+            <span class="menu-collapsed"></span>
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <span class="text-right h4 ml-5">LAST UPDATED </span><span class="h6" th:text="${lastUpdated}"></span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-info"  th:href="@{__${#strings.replace(#httpServletRequest.requestURI,'screen','admin')}__}"><i class="fa fa-compress"></i> </a>
+               </li>
+            </ul>
+        </div>
+    </th:block>
     <th:block th:if=${!isFullScreen}>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
+                <span class="text-right h4 ml-5">LAST UPDATED </span><span class="h6" th:text="${lastUpdated}"></span>
+            </li>
+    
+           <li class="nav-item">
+                <a class="nav-link text-info"  th:href="@{__${#strings.replace(#httpServletRequest.requestURI,'admin','screen')}__}"><i class="fa fa-expand"></i>Full Screen</a>
+           </li>
+           <li class="nav-item">
                  <a class="nav-link text-info"  th:href="@{__${#httpServletRequest.requestURI}__}"><i class="fa fa-retweet"></i>Reload</a>
             </li>
             <li class="nav-item">
@@ -29,14 +54,6 @@
         </ul>
     </div>
     </th:block>
-    <th:block th:unless=${!isFullScreen}>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a><img src="../img/CSCParts_logo.png" class="d-inline-block align-top" alt="OneSysConsulting" style="width: auto;height: 100px;margin-top: 60px;"></a>
-            </li>
-        </ul>
-    </div>
-</th:block>
+    
 </nav><!-- NavBar END -->
   </html>
