--- a/src/main/resources/templates/sideBarMenuLayout.html
+++ b/src/main/resources/templates/sideBarMenuLayout.html
@@ -13,8 +13,8 @@
       </ul>
       <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
         <span>Dashboards</span>
-        <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
-          <span class="fas fa-tachometer-alt fa-fw mr-3"></span>
+        <a class="d-flex align-items-center text-muted text-warning" href="#" onclick="javascript:hideSideBar()" aria-label="Add a new report">
+          <span class="fa fa-arrow-left fa-fw mr-3 text-warning"></span>
         </a>
       </h6>
       <ul class="nav flex-column mb-2">
