--- a/src/main/resources/templates/admin/chartByDateRange.html
+++ b/src/main/resources/templates/admin/chartByDateRange.html
@@ -26,10 +26,13 @@
       <th:block th:if=${!isFullScreen}>
       <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item',todayListClass='nav-item bg-info',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item',homeLinkClass='nav-link',todayLinkClass='nav-link text-warning',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link')"> </div>
     </th:block>
-            <main role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
+            <main id="mainContent" role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
               <div class="col-md-12">
-                <div class="row px-2 mt-3" style="margin-left: 5%;">
-                  <div class="col-12">
+                <div id="mainHeading" class="row px-2 mt-3" style="margin-right: 5%;">
+                  <div class="col-1 text-primary">
+                    <span id="sideMenuArrow" style="visibility: hidden;cursor: pointer;" class="fa fa-arrow-right fa-fw mr-3 text-dark" onclick="showSideBar()"></span>
+                  </div>
+                  <div class="col-6">
                     <span class="h3">DASHBOARD</span><span class="h6" th:text="${' Quotes , Orders & Invoices -  Today ('+toDay+')'}"></span>
                   </div>
                   
@@ -66,6 +69,7 @@
 <script type="text/javascript" src="../js/bootstrap.js"></script>
 <!-- Google chart -->
 <script type="text/javascript" src="../js/loader.js"></script>
+<script type="text/javascript" src="../js/custom.js"></script>
 <script th:inline="javascript">
   
   /*<![CDATA[*/
