--- a/src/main/resources/templates/admin/dashboardHome.html
+++ b/src/main/resources/templates/admin/dashboardHome.html
@@ -30,10 +30,13 @@
       <th:block th:if=${!isFullScreen}>
       <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item bg-info',todayListClass='nav-item',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item',homeLinkClass='nav-link text-warning',todayLinkClass='nav-link',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link')"> </div>
     </th:block>
-            <main role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
+            <main  id="mainContent" role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
               <div class="col-md-12">
-                <div class="row px-2 mt-3" style="margin-left: 5%;">
-                  <div class="col-12">
+                <div id="mainHeading" class="row px-2 mt-3">
+                  <div class="col-1 text-primary">
+                    <span id="sideMenuArrow" style="visibility: hidden;cursor: pointer;" class="fa fa-arrow-right fa-fw mr-3 text-dark" onclick="showSideBar()"></span>
+                  </div>
+                  <div class="col-11">
                   <span class="h3">DASHBOARD </span><span class="h6">Overview of Sales, Products & Targets</span>
                   </div>
                   
@@ -65,6 +68,6 @@
 <script type="text/javascript" src="../js/bootstrap.js"></script>
 <script th:src="@{/js/chunk-vendors.fe905e5e.js}"></script>
         <script th:src="@{/js/app.2fad2889.js}"></script>
-        
+        <script type="text/javascript" src="../js/custom.js"></script>    
  </body>
     </html>
